--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -136,14 +136,36 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 - 使用 pkg 安装：
 
 ```sh
-# pkg install bash
+# pkg install bash bash-completion-freebsd bash-completion-zfs 
 ```
+
+
+解释：
+- bash shell 主程序
+- bash-completion-freebsd 针对 FreeBSD 的 Bash 补全库扩展，作为依赖安装会 shells/bash-completion
+- bash-completion-zfs 针对 OpenZFS 的 Bash 补全库扩展
 
 - 使用 ports 安装：
 
 ```sh
-# cd /usr/ports/shells/bash/
-# make install clean
+# cd /usr/ports/shells/bash/ && make install clean
+# cd /usr/ports/shells/bash-completion-freebsd/ && make install clean
+# cd /usr/ports/shells/bash-completion-zfs/ && make install clean
+```
+
+### 查看安装后配置
+
+```sh
+# pkg info -D bash-completion # 作为依赖安装的
+bash-completion-2.14.0,2:
+On install:
+To enable the bash completion library, add the following to
+your .bashrc file:
+
+[[ $PS1 && -f /usr/local/share/bash-completion/bash_completion.sh ]] && \
+	source /usr/local/share/bash-completion/bash_completion.sh
+
+See /usr/local/share/doc/bash-completion/README.md for more information.
 ```
 
 ### 配置 bash
@@ -151,9 +173,16 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 ```bash
 # chsh -s /usr/local/bin/bash # 切换到 bash
 # touch ~/.bash_profile #  创建所需变量
-# ee ~/.bash_profile # 写入所需变量
 ```
 
+- 写入所需变量：
+
+
+编辑  `~/.bash_profile`，写入
+
+```sh
+[[ $PS1 && -f /usr/local/share/bash-completion/bash_completion.sh ]] && source /usr/local/share/bash-completion/bash_completion.sh
+```
 
 立即使用：
 
