--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.6-jie-zai-riscv-kai-fa-ban-shang-an-zhuang-openbsd.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.6-jie-zai-riscv-kai-fa-ban-shang-an-zhuang-openbsd.md
@@ -23,7 +23,7 @@ riscv 启动与树莓派不同（树莓派都在那个 EFI 分区中），一般
 
 从 <https://marc.info/?l=openbsd-misc&m=169046816826966&q=p3> 下载 `jh7110-starfive-visionfive-2-v1.3b.dtb` 并上传到 tftp 服务器。
 
-将此 `miniroot.img` 烧录到 SD 卡中。本文使用 [BalenaEtcher](https://www.balena.io/etcher/)。
+将此 `miniroot.img` 烧录到 SD 卡中。本文使用 [BalenaEtcher](https://etcher.balena.io/)。
 
 启动 VisionFive 2 并在串口输出期间（即 `Hit any key to stop autoboot` 时）在电脑的串口软件上按任意键输入，只有终止 autoboot 才能进入 opensbi。
 
